# inSilicoGenome

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/source/: conf.py  index.rst  installation.rst  modules.rst  tests.rst  usage.ipynb
docs/source/autoapi/: index.rst
docs/source/autoapi/insilicogenome/: index.rst
docs/source/autoapi/insilicogenome/cli/: index.rst
docs/source/autoapi/insilicogenome/insilicogenome/: index.rst
src/insilicogenome/: __init__.py  cli.py  core.py  insilicodata.py  insilicogenome.py
tests/: test_insilicodata.py  test_insilicogenome.py
