[tool.poetry]
name = "insilicogenome"
version = "0.1.0"
description = "A Python utility to create artificial genomes, this tool is designed to be used in bioinformatics benchmarking programs."
authors = ["Delmotte Jean"]
license = "GNU General Public License v3.0"
readme = "README.md"
documentation = "https://insilicogenome.readthedocs.io/en/latest/"
homepage = "https://github.com/propan2one/insilicogenome"
repository = "https://github.com/propan2one/insilicogenome"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
